--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "start": "node_modules\\.bin\\webpack-dev-server",
-    "build": "node_modules\\.bin\\webpack"
+    "build": "node_modules\\.bin\\webpack",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
