--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "doc": "doc"
   },
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node_modules\\.bin\\webpack-dev-server",
     "build": "node_modules\\.bin\\webpack",
     "heroku-postbuild": "webpack -p"
   },
